--- a/layout/templates/layout/index.html
+++ b/layout/templates/layout/index.html
@@ -48,9 +48,9 @@
                 </li>
                 <li><a href="##"><i class="fa-solid fa-user"></i></a>
                     <ul id="login">
-                        <li><a href="login.html" class="nav-link">Login&nbsp;<i
+                        <li><a href="{% url 'login' %}" class="nav-link">Login&nbsp;<i
                                     class="fa-solid fa-right-to-bracket"></i></a></li><br>
-                        <li><a href="register.html" class="nav-link">Register</a></li><br>
+                        <li><a href="{% url 'register' %}" class="nav-link">Register</a></li><br>
                     </ul>
                 </li>
             </ul>
